# skynet

./: .gitignore  BACKUP_RESTORE.md  Cargo.toml  INTAKE_MANIFEST.md  NAS_STUDY_MIGRATION_CHECKLIST.md  PATCH_BUNDLE_SCHEMA.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_TASKLIST.md  SETUP.md  discipline_and_enforcement.md  executable harness layer.md  pre-market_briefing_pipeline.md  pyproject.toml  research-grade-disciplinev2.md
alias_maps/: wiki_aliases.json
config/: codex_cloud_env.json  wiki_mirror_excludes.txt
docs/: DECISIONS.md  DOCTRINE.md  MILESTONE_LEDGER.md  PACKET_SCHEMA_GUIDE.md  REVIEW_GATE_CONTRACT.md  RISK_REGISTER.md  UI_SHELL_CONTRACT.md
eval/: wiki_queries_v1.jsonl
harness_specs/: failure_taxonomy.md  reasoning_chains.md  task_contracts.md
qt/: CMakeLists.txt
qt/qml/: AppWindow.qml  BottomBlotterPane.qml  CenterPacketPane.qml  LeftControlRail.qml  RightInspectorPane.qml  ShellGeometryState.qml  StatusStrip.qml  TabRail.qml
qt/src/: AbstractJsonRpcClient.h  JsonRpcFramedClient.cpp  JsonRpcFramedClient.h  ShellSessionController.cpp  ShellSessionController.h  main.cpp
qt/tests/: ShellSessionControllerTests.cpp
src/: cleanroom.rs  cloud.rs  codex_cloud.rs  error.rs  lib.rs  main.rs  metadata.rs  model.rs  packetizer.rs  parser.rs  pipeline.rs  preflight.rs  review.rs  shell.rs  storage.rs  validation.rs
tests/: live_codex_cloud.rs  test_aliases.py  test_catalog.py  test_devrefs.py  test_eval.py  test_file_links.py  test_flashcards.py  test_harness.py  test_health.py  test_intake.py  test_jsonrpc_api.py  test_markdown.py  test_missing_notes.py  test_packaging.py  test_page_quality.py  test_patch_bundle.py  test_project_reports.py  test_scheduled_audit.py  test_source_shelves.py  test_study_pages.py  test_study_quality.py  test_study_streams.py
tools/: sync_wiki_mirror.sh
wiki_tool/: __init__.py  (+25 more)
(+21 files in other folders)
